<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".civilfaculty">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:background="@color/purple_501"
                android:elevation="4dp"
                android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
                app:title="Civil Faculties"
                app:titleMarginStart="10dp"
                app:titleTextColor="@color/white"
                tools:ignore="MissingConstraints" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/HOD"
                android:textSize="30dp"
                android:textColor="@color/blue"
                android:gravity="center_horizontal"
                android:layout_marginTop="5dp" />

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                app:cardCornerRadius="15dp"
                app:cardElevation="10dp"
                app:cardMaxElevation="15dp">

                <RelativeLayout
                    android:id="@+id/relative1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_vertical">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <ImageView
                            android:id="@+id/imageA"
                            android:layout_width="350dp"
                            android:layout_height="230dp"
                            android:layout_centerInParent="true"
                            android:src="@drawable/classroom"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintHorizontal_bias="0.5"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            app:layout_constraintVertical_bias="0.233" />

                        <TextView
                            android:id="@+id/textA"
                            android:layout_width="match_parent"
                            android:layout_height="35dp"
                            android:layout_centerHorizontal="true"
                            android:gravity="center_horizontal"
                            android:text="@string/HODCivil"
                            android:textColor="@color/orange"
                            android:textSize="24sp"
                            android:textStyle="bold"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintHorizontal_bias="0.5"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/imageA" />

                    </androidx.constraintlayout.widget.ConstraintLayout>

                </RelativeLayout>

            </androidx.cardview.widget.CardView>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Faculties"
                android:textSize="30dp"
                android:textColor="@color/blue"
                android:gravity="center_horizontal"
                android:layout_marginTop="15dp" />

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                app:cardCornerRadius="15dp"
                app:cardElevation="10dp"
                app:cardMaxElevation="15dp">

                <RelativeLayout
                    android:id="@+id/relative2"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_vertical">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <ImageView
                            android:id="@+id/imageB"
                            android:layout_width="350dp"
                            android:layout_height="230dp"
                            android:layout_centerInParent="true"
                            android:src="@drawable/classroom"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintHorizontal_bias="0.5"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            app:layout_constraintVertical_bias="0.233" />

                        <TextView
                            android:id="@+id/textB"
                            android:layout_width="match_parent"
                            android:layout_height="35dp"
                            android:layout_centerHorizontal="true"
                            android:gravity="center_horizontal"
                            android:text="@string/civilFac1"
                            android:textColor="@color/orange"
                            android:textSize="24sp"
                            android:textStyle="bold"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintHorizontal_bias="0.5"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/imageB" />

                    </androidx.constraintlayout.widget.ConstraintLayout>

                </RelativeLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                app:cardCornerRadius="15dp"
                app:cardElevation="10dp"
                app:cardMaxElevation="15dp">

                <RelativeLayout
                    android:id="@+id/relative3"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_vertical">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <ImageView
                            android:id="@+id/imageC"
                            android:layout_width="350dp"
                            android:layout_height="230dp"
                            android:layout_centerInParent="true"
                            android:src="@drawable/classroom"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintHorizontal_bias="0.5"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            app:layout_constraintVertical_bias="0.233" />

                        <TextView
                            android:id="@+id/textC"
                            android:layout_width="wrap_content"
                            android:layout_height="35dp"
                            android:layout_centerHorizontal="true"
                            android:gravity="center_horizontal"
                            android:text="@string/civilFac2"
                            android:textColor="@color/orange"
                            android:textSize="24sp"
                            android:textStyle="bold"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintHorizontal_bias="0.5"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/imageC" />

                    </androidx.constraintlayout.widget.ConstraintLayout>

                </RelativeLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                app:cardCornerRadius="15dp"
                app:cardElevation="10dp"
                app:cardMaxElevation="15dp">

                <RelativeLayout
                    android:id="@+id/relative4"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_vertical">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <ImageView
                            android:id="@+id/imageD"
                            android:layout_width="350dp"
                            android:layout_height="230dp"
                            android:layout_centerInParent="true"
                            android:src="@drawable/classroom"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintHorizontal_bias="0.5"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            app:layout_constraintVertical_bias="0.233" />

                        <TextView
                            android:id="@+id/textD"
                            android:layout_width="match_parent"
                            android:layout_height="35dp"
                            android:layout_centerHorizontal="true"
                            android:gravity="center_horizontal"
                            android:text="@string/civilFac3"
                            android:textColor="@color/orange"
                            android:textSize="24sp"
                            android:textStyle="bold"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintHorizontal_bias="0.5"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/imageD" />

                    </androidx.constraintlayout.widget.ConstraintLayout>

                </RelativeLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                app:cardCornerRadius="15dp"
                app:cardElevation="10dp"
                app:cardMaxElevation="15dp">

                <RelativeLayout
                    android:id="@+id/relative5"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_vertical">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <ImageView
                            android:id="@+id/imageE"
                            android:layout_width="350dp"
                            android:layout_height="230dp"
                            android:layout_centerInParent="true"
                            android:src="@drawable/classroom"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintHorizontal_bias="0.5"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            app:layout_constraintVertical_bias="0.233" />

                        <TextView
                            android:id="@+id/textE"
                            android:layout_width="match_parent"
                            android:layout_height="35dp"
                            android:layout_centerHorizontal="true"
                            android:gravity="center_horizontal"
                            android:text="@string/civilFac4"
                            android:textColor="@color/orange"
                            android:textSize="24sp"
                            android:textStyle="bold"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintHorizontal_bias="0.5"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/imageE" />

                    </androidx.constraintlayout.widget.ConstraintLayout>

                </RelativeLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                app:cardCornerRadius="15dp"
                app:cardElevation="10dp"
                app:cardMaxElevation="15dp">

                <RelativeLayout
                    android:id="@+id/relative6"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_vertical">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <ImageView
                            android:id="@+id/imageF"
                            android:layout_width="350dp"
                            android:layout_height="230dp"
                            android:layout_centerInParent="true"
                            android:src="@drawable/classroom"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintHorizontal_bias="0.5"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            app:layout_constraintVertical_bias="0.233" />

                        <TextView
                            android:id="@+id/textF"
                            android:layout_width="match_parent"
                            android:layout_height="35dp"
                            android:layout_centerHorizontal="true"
                            android:gravity="center_horizontal"
                            android:text="@string/civilFac5"
                            android:textColor="@color/orange"
                            android:textSize="24sp"
                            android:textStyle="bold"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintHorizontal_bias="0.5"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/imageF" />

                    </androidx.constraintlayout.widget.ConstraintLayout>

                </RelativeLayout>

            </androidx.cardview.widget.CardView>

        </LinearLayout>

    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>